# vctr

./: CMakeLists.txt  README.md
.github/: CODEOWNERS
.github/workflows/: build-test.yaml
include/: matrix.h  solve.h  vctr.h  vector.h
src/: CMakeLists.txt  vctr.cpp  vector.cpp
tests/: CMakeLists.txt  vctr.t.cpp  vector.t.cpp
